--- a/index.html
+++ b/index.html
@@ -141,6 +141,6 @@
 			</div>
 		</div>
 	</body>
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </html>
